# Fastcgi-Container

./: CMakeLists.txt  README.md
example/: example.cpp  fastcgi.conf  handlers.xml
gentoo/portage/dev-cpp/fastcgi-container/: Manifest  fastcgi-container-9999.ebuild
include/details/: handler_context.h
include/fastcgi3/: attributes_holder.h  handler.h  http_request.h  request.h  session.h
syslog/: syslog-logger.cpp
